# rust-wasm-chat-frontend

./: Cargo.toml  build.sh  index.html  js_hello_world.d.ts  js_hello_world.js  js_hello_world_bg.d.ts  js_hello_world_bg.wasm
src/: lib.rs
