[package]
name = "js-hello-world"
version = "0.1.0"
authors = ["grizwako <griz.wako@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
serde = "^1.0.59"
serde_derive = "^1.0.59"
serde_json = "1.0"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CssStyleDeclaration',
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
  'WebSocket',
  'console',
  'FormData',
  'HtmlFormElement',
  'EventListener',
  'EventTarget',
  'Event'
]